--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,20 @@ footer{
 footer a{
   font-size: 20px;
 }
+
+form{
+  margin: 0 auto;
+  padding-top: 6%;
+  padding-left: 5%;
+}
+
+form button{
+  display: block;
+  margin-left: 63%;
+  width: 20%;
+  padding: 2%;
+}
+
 header{
   position: fixed;
   z-index: 3;
@@ -120,6 +134,20 @@ h1.homePageText{
 h1 a:hover{
   text-decoration: none;
 }
+
+input{
+  display: block;
+  width: 60%;
+  margin: 0 auto;
+}
+
+label{
+  width: 100%;
+  font-size: 20px;
+  display: flex;
+  justify-content:space-between;
+}
+
 nav{
   text-align: right;
   display: flex;
@@ -130,6 +158,19 @@ nav{
 nav .fa{
  font-size: 32px;
 }
+
+textarea{
+  display: block;
+}
+
+.contact{
+  padding-top: 5%;
+}
+
+.contact p{
+  font-size: 20px;
+}
+
 .enterLink{
   margin-top: 2%;
   border: 1px solid black;
@@ -165,6 +206,11 @@ nav .fa{
   width: 15%;
 
 }
+
+.messageLabel {
+  padding-right: 17%;
+}
+
 .peopleInput{
   padding-bottom: 10%;
   overflow-y: scroll;
@@ -232,6 +278,18 @@ nav .fa{
   padding-bottom: 10%;
   overflow-y: scroll;
 
+}
+
+.resumeSection a{
+  border: 1px solid black;
+  background-color: lightblue;
+  color: white;
+  width: 30%;
+  padding: 2%;
+  font-size: 24px;
+  text-align: center;
+  display: block;
+  margin: 3% auto 0%;
 }
 
 .resumeSection img{
